--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -191,17 +191,23 @@
     <Compile Include="Forms\DailyTrading\StatisticsReport\FrmStockPositionQuery.Designer.cs">
       <DependentUpon>FrmStockPositionQuery.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\_embedAppointedStockApplication.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\_embedAppointedStockApplication.Designer.cs">
-      <DependentUpon>_embedAppointedStockApplication.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\InvestmentDecision\_embedIDApplication.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\InvestmentDecision\_embedIDApplication.Designer.cs">
       <DependentUpon>_embedIDApplication.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_embedIDOperationVote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_embedIDOperationVote.Designer.cs">
+      <DependentUpon>_embedIDOperationVote.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_embedAppointedStockApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_embedAppointedStockApplication.Designer.cs">
+      <DependentUpon>_embedAppointedStockApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\InvestmentDecision\FrmStockInvestmentDecision.cs">
       <SubType>Form</SubType>
@@ -233,11 +239,11 @@
     <Compile Include="Forms\InvestmentDecision\_dialogIDApplication.Designer.cs">
       <DependentUpon>_dialogIDApplication.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\_dialogIDOperationDetail.cs">
+    <Compile Include="Forms\InvestmentDecision\_embedIDOperationDetail.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\_dialogIDOperationDetail.Designer.cs">
-      <DependentUpon>_dialogIDOperationDetail.cs</DependentUpon>
+    <Compile Include="Forms\InvestmentDecision\_embedIDOperationDetail.Designer.cs">
+      <DependentUpon>_embedIDOperationDetail.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\StatisticsReport\UserInvestIncomeAccountModel.cs" />
     <Compile Include="Models\StatisticsReport\StockInvestIncomeSummaryModel.cs" />
@@ -644,11 +650,14 @@
     <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmStockPositionQuery.resx">
       <DependentUpon>FrmStockPositionQuery.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\_embedAppointedStockApplication.resx">
-      <DependentUpon>_embedAppointedStockApplication.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_embedIDApplication.resx">
       <DependentUpon>_embedIDApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_embedIDOperationVote.resx">
+      <DependentUpon>_embedIDOperationVote.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_embedAppointedStockApplication.resx">
+      <DependentUpon>_embedAppointedStockApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\FrmStockInvestmentDecision.resx">
       <DependentUpon>FrmStockInvestmentDecision.cs</DependentUpon>
@@ -746,8 +755,8 @@
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIDApplication.resx">
       <DependentUpon>_dialogIDApplication.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIDOperationDetail.resx">
-      <DependentUpon>_dialogIDOperationDetail.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_embedIDOperationDetail.resx">
+      <DependentUpon>_embedIDOperationDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MarginTrading\FrmUserMarginTrading.resx">
       <DependentUpon>FrmUserMarginTrading.cs</DependentUpon>
