--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -173,6 +173,12 @@
     <Compile Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.Designer.cs">
       <DependentUpon>_dialogIDReasonContentEdit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Common\_dialogInputVoteReason.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Common\_dialogInputVoteReason.Designer.cs">
+      <DependentUpon>_dialogInputVoteReason.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DailyTrading\DataManage\FrmStockTransfer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -646,6 +652,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.resx">
       <DependentUpon>_dialogIDReasonContentEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Common\_dialogInputVoteReason.resx">
+      <DependentUpon>_dialogInputVoteReason.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DailyTrading\DataManage\FrmStockTransfer.resx">
       <DependentUpon>FrmStockTransfer.cs</DependentUpon>
