--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -195,6 +195,10 @@
     <Compile Include="Migrations\201612080621550_023.Designer.cs">
       <DependentUpon>201612080621550_023.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612150537210_024.cs" />
+    <Compile Include="Migrations\201612150537210_024.Designer.cs">
+      <DependentUpon>201612150537210_024.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -281,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612080621550_023.resx">
       <DependentUpon>201612080621550_023.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612150537210_024.resx">
+      <DependentUpon>201612150537210_024.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
