--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201612160315035_025.Designer.cs">
       <DependentUpon>201612160315035_025.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612200301599_026.cs" />
+    <Compile Include="Migrations\201612200301599_026.Designer.cs">
+      <DependentUpon>201612200301599_026.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -295,6 +299,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612160315035_025.resx">
       <DependentUpon>201612160315035_025.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612200301599_026.resx">
+      <DependentUpon>201612200301599_026.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
