--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201612210207273_027.Designer.cs">
       <DependentUpon>201612210207273_027.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612270252298_028.cs" />
+    <Compile Include="Migrations\201612270252298_028.Designer.cs">
+      <DependentUpon>201612270252298_028.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -309,6 +313,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612210207273_027.resx">
       <DependentUpon>201612210207273_027.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612270252298_028.resx">
+      <DependentUpon>201612270252298_028.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
