--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -18,8 +18,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
-    <!--<add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=RG@Justno0b;" providerName="System.Data.SqlClient" />-->   
+    <!--<add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />-->
+    <add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=RG@Justno0b;" providerName="System.Data.SqlClient" />   
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -37,7 +37,7 @@
     <!-- 默认界面皮肤 -->
     <add key="DefaultSkinName" value="Office 2013" />
     <!-- 统计用期初日期 -->
-    <add key="InitDate" value="2016-01-01" />
+    <add key="InitDate" value="2017-01-01" />
     <!-- 融资融券年利率 -->
     <add key="MarginTradingAPR" value="0.08" />
     <!-- 利息年核算天数 -->
