--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -232,6 +232,10 @@
     <Compile Include="Migrations\201701050235054_032.Designer.cs">
       <DependentUpon>201701050235054_032.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701110715474_033.cs" />
+    <Compile Include="Migrations\201701110715474_033.Designer.cs">
+      <DependentUpon>201701110715474_033.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -345,6 +349,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701050235054_032.resx">
       <DependentUpon>201701050235054_032.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701110715474_033.resx">
+      <DependentUpon>201701110715474_033.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
