--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -34,6 +34,8 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
+    <!-- 配置文件Config.ini路径 -->
+    <add key ="ConfigFilePath" value ="App_Data\Config\Config.ini"/>
     <!-- 默认界面皮肤 -->
     <add key="DefaultSkinName" value="Office 2013" />
     <!-- 统计用期初日期 -->
