--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Domain\User\UserFundInfo.cs" />
     <Compile Include="Domain\User\UserIncome.cs" />
     <Compile Include="Domain\User\UserInfo.cs" />
+    <Compile Include="Util\CTMHelper.cs" />
     <Compile Include="Util\EnumHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="EnumLibrary.cs" />
