--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -179,6 +179,12 @@
     <Compile Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.Designer.cs">
       <DependentUpon>_dialogIDReasonContentEdit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Admin\Log\FrmLoginLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Admin\Log\FrmLoginLog.Designer.cs">
+      <DependentUpon>FrmLoginLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Common\_dialogInputVoteReason.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -667,6 +673,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.resx">
       <DependentUpon>_dialogIDReasonContentEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Admin\Log\FrmLoginLog.resx">
+      <DependentUpon>FrmLoginLog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Common\_dialogInputVoteReason.resx">
       <DependentUpon>_dialogInputVoteReason.cs</DependentUpon>
