--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -19,7 +19,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />
-    <!--<add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=RG@Justno0b;" providerName="System.Data.SqlClient" />-->   
+    <!--<add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=RG@Justno0b;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -35,7 +35,7 @@
   </runtime>
   <appSettings>
     <!-- 配置文件Config.ini路径 -->
-    <add key ="ConfigFilePath" value ="App_Data\Config\Config.ini"/>
+    <add key="ConfigFilePath" value="App_Data\Config\Config.ini" />
     <!-- 默认界面皮肤 -->
     <add key="DefaultSkinName" value="Office 2013" />
     <!-- 统计用期初日期 -->
@@ -48,4 +48,16 @@
     <add key="TradeRecordHistoryQueryMonth" value="1" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
