--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -460,12 +460,6 @@
     <Compile Include="Forms\DailyTrading\StatisticsReport\FrmStockInvestIncomeSummary.Designer.cs">
       <DependentUpon>FrmStockInvestIncomeSummary.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\DailyTrading\StatisticsReport\FrmStockPosition.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\DailyTrading\StatisticsReport\FrmStockPosition.Designer.cs">
-      <DependentUpon>FrmStockPosition.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\DailyTrading\StatisticsReport\FrmUserInvestIncomeAccount.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -856,6 +850,7 @@
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -886,9 +881,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmAccountStockPosition.resx">
       <DependentUpon>FrmAccountStockPosition.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmStockPosition.resx">
-      <DependentUpon>FrmStockPosition.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmUserInvestIncomeMonthly.resx">
       <DependentUpon>FrmUserInvestIncomeMonthly.cs</DependentUpon>
