--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionTradeRecord.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionVote.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionOperationVote.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentPlanRecord.cs" />
     <Compile Include="Domain\InvestmentDecision\MarketTrendForecastDetail.cs" />
     <Compile Include="Domain\InvestmentDecision\MarketTrendForecastInfo.cs" />
     <Compile Include="Domain\InvestmentDecision\PositionStockAnalysisSummary.cs" />
