--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionOperationVoteMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionStockPoolLogMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionTradeRecordMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\InvestmentPlanRecordMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisSummaryMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisDetailMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisInfoMap.cs" />
@@ -241,6 +242,10 @@
     <Compile Include="Migrations\201701170213374_034.Designer.cs">
       <DependentUpon>201701170213374_034.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702080748082_035.cs" />
+    <Compile Include="Migrations\201702080748082_035.Designer.cs">
+      <DependentUpon>201702080748082_035.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -360,6 +365,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701170213374_034.resx">
       <DependentUpon>201701170213374_034.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702080748082_035.resx">
+      <DependentUpon>201702080748082_035.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
