--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionOperationVoteMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionStockPoolLogMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionTradeRecordMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\InvestmentPlanRecordSummaryMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentPlanRecordMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisSummaryMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisDetailMap.cs" />
@@ -246,6 +247,10 @@
     <Compile Include="Migrations\201702080844207_035.Designer.cs">
       <DependentUpon>201702080844207_035.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702090148334_036.cs" />
+    <Compile Include="Migrations\201702090148334_036.Designer.cs">
+      <DependentUpon>201702090148334_036.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -368,6 +373,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702080844207_035.resx">
       <DependentUpon>201702080844207_035.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702090148334_036.resx">
+      <DependentUpon>201702090148334_036.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
