--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -224,6 +224,12 @@
     <Compile Include="Forms\InvestmentDecision\_dialogIDOperationRelateRecord.Designer.cs">
       <DependentUpon>_dialogIDOperationRelateRecord.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogIPRResult.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogIPRResult.Designer.cs">
+      <DependentUpon>_dialogIPRResult.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\InvestmentDecision\_dialogIPREdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -704,6 +710,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIDOperationRelateRecord.resx">
       <DependentUpon>_dialogIDOperationRelateRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIPRResult.resx">
+      <DependentUpon>_dialogIPRResult.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIPREdit.resx">
       <DependentUpon>_dialogIPREdit.cs</DependentUpon>
