Amend TradeDataVerify DealVolume and DealPrice display format

--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -19,7 +19,7 @@
   </entityFramework>
   <connectionStrings>
     <!--<add name="CTMContext" connectionString="Server=10.10.10.2\zb; DataBase=CTMDB; uid=sa;pwd=Nc@3102;" providerName="System.Data.SqlClient" />-->
-    <add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=RG@Justno0b;" providerName="System.Data.SqlClient" />
+    <add name="CTMContext" connectionString="Server=10.10.16.66\RGServer; DataBase=CTMDB; uid=sa;pwd=sa123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
